--- a/test-framework-sandbox/test-framework-sandbox.cabal
+++ b/test-framework-sandbox/test-framework-sandbox.cabal
@@ -3,10 +3,19 @@ Version:        0.0.1
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       test-sandbox support for the test-framework package
-Description:    Interfaces the test-sandbox the test-framework packages to allow writing system tests
+Description:    Interfaces the test-sandbox with the test-framework packages to allow writing system tests
                 in Haskell in a standard fashion.
-                The environment is preserved between test cases, enabling the user, for instance, to start
+                .
+                The environment is preserved between test cases. This enables the user, for instance, to start
                 a process in one test and stop it in another.
+                .
+                Usage examples can be found on the github page:
+                <http://gree.github.io/haskell-test-sandbox/>
+                .
+                A full example project is available at:
+                <https://git.github.com/benjamin-surma/flare-tests/>
+                .
+                Extensive documentation is available in the source code itself.
 License:        BSD3
 License-File:   LICENSE
 Author:         Benjamin Surma <benjamin.surma@gree.net>
