--- a/test-sandbox/test-sandbox.cabal
+++ b/test-sandbox/test-sandbox.cabal
@@ -4,8 +4,14 @@ Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       Sandbox for system tests
 Description:    Allows starting and stopping previously registered programs in a sandboxed environment.
+                .
                 This package provides functions to easily communicate with the aforementioned processes
                 via TCP or standard input/output.
+                .
+                Usage examples can be found on the github page:
+                <http://gree.github.io/haskell-test-sandbox/>
+                .
+                Extensive documentation is available in the source code itself.
 License:        BSD3
 License-File:   LICENSE
 Author:         Benjamin Surma <benjamin.surma@gree.net>
