--- a/test-sandbox-hunit/test-sandbox-hunit.cabal
+++ b/test-sandbox-hunit/test-sandbox-hunit.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox-hunit
-Version:        0.0.1.3
+Version:        0.0.1.4
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       HUnit convenience functions for use with test-sandbox
@@ -18,12 +18,12 @@ Source-Repository head
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-sandbox-hunit_0.0.1.3
+    Tag:        test-sandbox-hunit_0.0.1.4
 
 Library
     Exposed-modules:    Test.Sandbox.HUnit
 
-    Build-Depends:      base >=4 && <5, lifted-base, test-sandbox == 0.0.1.*, HUnit
+    Build-Depends:      base >=4 && <5, lifted-base, test-sandbox >=0.0.1.5 && <0.0.2, HUnit
 
     Hs-source-dirs:     src
 
