--- a/test-sandbox-quickcheck/test-sandbox-quickcheck.cabal
+++ b/test-sandbox-quickcheck/test-sandbox-quickcheck.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox-quickcheck
-Version:        0.0.1.3
+Version:        0.0.1.4
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       QuickCheck convenience functions for use with test-sandbox
@@ -18,13 +18,13 @@ Source-Repository head
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-sandbox-quickcheck_0.0.1.3
+    Tag:        test-sandbox-quickcheck_0.0.1.4
 
 Library
     Exposed-modules:    Test.Sandbox.QuickCheck
 
     Build-Depends:      base >=4 && <5, mtl, random, transformers,
-                        test-sandbox == 0.0.1.*, QuickCheck >=2.1
+                        test-sandbox >=0.0.1.5 && <0.0.2, QuickCheck >=2.1
 
     Hs-source-dirs:     src
 
