--- a/test-sandbox/test-sandbox.cabal
+++ b/test-sandbox/test-sandbox.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox
-Version:        0.0.1.6
+Version:        0.0.1.7
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       Sandbox for system tests
@@ -14,8 +14,8 @@ Description:    Allows starting and stopping previously registered programs in a
                 Extensive documentation is available in the source code itself.
 License:        BSD3
 License-File:   LICENSE
-Author:         Benjamin Surma <benjamin.surma@gree.net>
-Maintainer:     Benjamin Surma <benjamin.surma@gree.net>
+Author:         Benjamin Surma <benjamin.surma@gmail.com>
+Maintainer:     Benjamin Surma <benjamin.surma@gmail.com>
 Build-Type:     Simple
 Homepage:       http://gree.github.io/haskell-test-sandbox/
 Bug-Reports:    https://github.com/gree/haskell-test-sandbox/issues
@@ -25,7 +25,7 @@ Source-Repository head
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-sandbox_0.0.1.6
+    Tag:        test-sandbox_0.0.1.7
 
 Library
     Exposed-modules:    Test.Sandbox
