--- a/test-sandbox-hunit/test-sandbox-hunit.cabal
+++ b/test-sandbox-hunit/test-sandbox-hunit.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox-hunit
-Version:        0.0.1.4
+Version:        0.0.1.5
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       HUnit convenience functions for use with test-sandbox
@@ -7,8 +7,8 @@ Description:    This package provides wrappers around the Test.HUnit unit-test f
                 allowing them to be used easily in the Test.Sandbox monad provided by the test-sandbox package.
 License:        BSD3
 License-File:   LICENSE
-Author:         Benjamin Surma <benjamin.surma@gree.net>
-Maintainer:     Benjamin Surma <benjamin.surma@gree.net>
+Author:         Benjamin Surma <benjamin.surma@gmail.com>
+Maintainer:     Benjamin Surma <benjamin.surma@gmail.com>
 Build-Type:     Simple
 Homepage:       http://gree.github.io/haskell-test-sandbox/
 Bug-Reports:    https://github.com/gree/haskell-test-sandbox/issues
@@ -18,7 +18,7 @@ Source-Repository head
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-sandbox-hunit_0.0.1.4
+    Tag:        test-sandbox-hunit_0.0.1.5
 
 Library
     Exposed-modules:    Test.Sandbox.HUnit
