--- a/test-framework-sandbox/test-framework-sandbox.cabal
+++ b/test-framework-sandbox/test-framework-sandbox.cabal
@@ -1,5 +1,5 @@
 Name:           test-framework-sandbox
-Version:        0.0.2.2
+Version:        0.0.2.3
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       test-sandbox support for the test-framework package
@@ -18,8 +18,8 @@ Description:    Interfaces the test-sandbox with the test-framework packages to 
                 Extensive documentation is available in the source code itself.
 License:        BSD3
 License-File:   LICENSE
-Author:         Benjamin Surma <benjamin.surma@gree.net>
-Maintainer:     Benjamin Surma <benjamin.surma@gree.net>
+Author:         Benjamin Surma <benjamin.surma@gmail.com>
+Maintainer:     Benjamin Surma <benjamin.surma@gmail.com>
 Build-Type:     Simple
 Homepage:       http://gree.github.io/haskell-test-sandbox/
 Bug-Reports:    https://github.com/gree/haskell-test-sandbox/issues
@@ -29,7 +29,7 @@ Source-Repository head
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-framework-sandbox_0.0.2.2
+    Tag:        test-framework-sandbox_0.0.2.3
 
 Library
     Exposed-modules:    Test.Framework.Providers.Sandbox
