--- a/test-sandbox/test-sandbox.cabal
+++ b/test-sandbox/test-sandbox.cabal
@@ -40,3 +40,14 @@ Library
     Hs-source-dirs:     src
 
     Default-Language:   Haskell2010
+
+test-suite test
+    type:              exitcode-stdio-1.0
+    main-is:           spec.hs
+    hs-source-dirs:    test
+    ghc-options:       -Wall
+    build-depends:     base
+                     , hspec
+                     , test-sandbox
+                     , process
+    Default-Language:   Haskell2010
