Improve port and process management Add ReuseAddr's flag for isBindable. Add isBindableByProc which uses /proc/net to search available port. Change userPorts-range from [49152..65535] to [5001..32767].  ([49152..65535] is os-port-searching area.) Add cleanUpProcesses which stops process-groups when test is finished. Add runSandbox and withSandbox funtions for unit-test Change ErrorT to ExceptT Fix compile-warning Add .travis.yml

--- a/test-sandbox-hunit/test-sandbox-hunit.cabal
+++ b/test-sandbox-hunit/test-sandbox-hunit.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox-hunit
-Version:        0.0.1.5
+Version:        0.0.1.6
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       HUnit convenience functions for use with test-sandbox
@@ -18,7 +18,7 @@ Source-Repository head
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-sandbox-hunit_0.0.1.5
+    Tag:        test-sandbox-hunit_0.0.1.6
 
 Library
     Exposed-modules:    Test.Sandbox.HUnit
@@ -28,3 +28,5 @@ Library
     Hs-source-dirs:     src
 
     Default-Language:   Haskell2010
+
+    ghc-options:       -Wall
