--- a/test-sandbox-quickcheck/test-sandbox-quickcheck.cabal
+++ b/test-sandbox-quickcheck/test-sandbox-quickcheck.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox-quickcheck
-Version:        0.0.1.5
+Version:        0.0.1.6
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       QuickCheck convenience functions for use with test-sandbox
@@ -18,14 +18,16 @@ Source-Repository head
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-sandbox-quickcheck_0.0.1.5
+    Tag:        test-sandbox-quickcheck_0.0.1.6
 
 Library
     Exposed-modules:    Test.Sandbox.QuickCheck
 
     Build-Depends:      base >=4 && <5, mtl, random, transformers,
-                        test-sandbox >=0.0.1.5 && <0.0.2, QuickCheck >=2.1
+                        test-sandbox >=0.0.1.9 && <0.0.2, QuickCheck >=2.7
 
     Hs-source-dirs:     src
 
     Default-Language:   Haskell2010
+
+    ghc-options:       -Wall
