--- a/hspec-test-sandbox/hspec-test-sandbox.cabal
+++ b/hspec-test-sandbox/hspec-test-sandbox.cabal
@@ -3,8 +3,9 @@
 
 name:                hspec-test-sandbox
 version:             0.1.0
--- synopsis:            
--- description:         
+synopsis:            Hspec convenience functions for use with test-sandbox
+description:         This package provides useful functions to write around the Test.Hspec unit-test functions,
+                     allowing them to be used easily in the Test.Sandbox monad provided by the test-sandbox package.
 license:             BSD3
 license-file:        LICENSE
 author:              Junji Hashimoto
