--- a/hspec-test-sandbox/hspec-test-sandbox.cabal
+++ b/hspec-test-sandbox/hspec-test-sandbox.cabal
@@ -16,6 +16,16 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
+Homepage:       http://gree.github.io/haskell-test-sandbox/
+Bug-Reports:    https://github.com/gree/haskell-test-sandbox/issues
+Source-Repository head
+    Type:       git
+    Location:   https://github.com/gree/haskell-test-sandbox
+Source-Repository this
+    Type:       git
+    Location:   https://github.com/gree/haskell-test-sandbox
+    Tag:        hspec-test-sandbox_0.1.0
+
 library
   exposed-modules:     Test.Hspec.Sandbox
   -- other-modules:       
