--- a/test-sandbox/test-sandbox.cabal
+++ b/test-sandbox/test-sandbox.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox
-Version:        0.0.1.13
+Version:        0.1.0
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       Sandbox for system tests
@@ -19,13 +19,16 @@ Maintainer:     Benjamin Surma <benjamin.surma@gmail.com>
 Build-Type:     Simple
 Homepage:       http://gree.github.io/haskell-test-sandbox/
 Bug-Reports:    https://github.com/gree/haskell-test-sandbox/issues
+
+Extra-Source-Files:     ChangeLog.md
+
 Source-Repository head
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-sandbox_0.0.1.11
+    Tag:        test-sandbox_0.1.0
 
 Library
     Exposed-modules:    Test.Sandbox
