--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,64 @@
-language: haskell
+cache: apt
+env:
+ - GHCVER=7.8.4
+ - GHCVER=7.8.3
+ - GHCVER=7.6.3
 
-matrix:
-  include:
-    - os: linux
-    - os: osx
-
+before_install:
+ - sudo add-apt-repository -y ppa:hvr/ghc
+ - sudo apt-get update
+ - sudo apt-get install cabal-install-1.20 ghc-$GHCVER
+ - export PATH=/opt/ghc/$GHCVER/bin:$PATH
+ - |
+   if [ $GHCVER = "head" ] || [ ${GHCVER%.*} = "7.8" ]; then
+     sudo apt-get install happy-1.19.4 alex-3.1.3
+     export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.4/bin:$PATH
+   else
+     sudo apt-get install happy alex
+   fi
 install:
-    - cabal update
+ - cabal-1.20 update
 
 script:
+  - export CABAL=cabal-1.20
   - cd test-sandbox
-  - cabal install --only-dependencies --enable-tests
-  - "cabal configure --enable-tests --ghc-options=-Werror && cabal build && cabal test "
-  - "cabal sdist && cabal install dist/test-sandbox-*.tar.gz"
-  - cd ../test-sandbox-hunit
-  - cabal install --only-dependencies --enable-tests
-  - "cabal configure --enable-tests --ghc-options=-Werror && cabal build && cabal test "
-  - "cabal sdist && cabal install dist/test-sandbox-*.tar.gz"
-  - cd ../test-sandbox-quickcheck
-  - cabal install --only-dependencies --enable-tests
-  - "cabal configure --enable-tests --ghc-options=-Werror && cabal build && cabal test "
-  - "cabal sdist && cabal install dist/test-sandbox-quickcheck-*.tar.gz"
-  - cd ../test-framework-sandbox
-  - cabal install --only-dependencies --enable-tests
-  - "cabal configure --enable-tests --ghc-options=-Werror && cabal build && cabal test "
-  - "cabal sdist && cabal install dist/test-framework-sandbox-*.tar.gz"
-  - cd ../hspec-test-sandbox
-  - cabal install --only-dependencies --enable-tests
-  - "cabal configure --enable-tests --ghc-options=-Werror && cabal build && cabal test "
-  - "cabal sdist && cabal install dist/hspec-test-sandbox-*.tar.gz"
+  - $CABAL install --only-dependencies --enable-tests
+  - $CABAL check
+  - $CABAL sdist
+  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
+  - "rm -rf tmp && mkdir tmp && cd tmp"
+  - "tar -xf $SRC_TGZ && cd test-sandbox*/"
+  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - $CABAL install $SRC_TGZ
+  - cd ../../../hspec-test-sandbox
+  - $CABAL install --only-dependencies --enable-tests
+  - $CABAL check
+  - $CABAL sdist
+  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
+  - "rm -rf tmp && mkdir tmp && cd tmp"
+  - "tar -xf $SRC_TGZ && cd hspec-test-sandbox*/"
+  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - cd ../../../test-sandbox-hunit
+  - $CABAL install --only-dependencies --enable-tests
+  - $CABAL check
+  - $CABAL sdist
+  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
+  - "rm -rf tmp && mkdir tmp && cd tmp"
+  - "tar -xf $SRC_TGZ && cd test-sandbox-hunit*/"
+  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - cd ../../../test-sandbox-quickcheck
+  - $CABAL install --only-dependencies --enable-tests
+  - $CABAL check
+  - $CABAL sdist
+  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
+  - "rm -rf tmp && mkdir tmp && cd tmp"
+  - "tar -xf $SRC_TGZ && cd test-sandbox-quickcheck*/"
+  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - cd ../../../test-framework-sandbox
+  - $CABAL install --only-dependencies --enable-tests
+  - $CABAL check
+  - $CABAL sdist
+  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
+  - "rm -rf tmp && mkdir tmp && cd tmp"
+  - "tar -xf $SRC_TGZ && cd test-framework-sandbox*/"
+  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
