--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 cache: apt
 env:
+ - GHCVER=7.10.1
  - GHCVER=7.8.4
- - GHCVER=7.8.3
  - GHCVER=7.6.3
 
 before_install:
  - sudo add-apt-repository -y ppa:hvr/ghc
  - sudo apt-get update
- - sudo apt-get install cabal-install-1.20 ghc-$GHCVER
+ - sudo apt-get install cabal-install-1.22 ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
  - |
    if [ $GHCVER = "head" ] || [ ${GHCVER%.*} = "7.8" ]; then
@@ -17,10 +17,10 @@ before_install:
      sudo apt-get install happy alex
    fi
 install:
- - cabal-1.20 update
+ - cabal-1.22 update
 
 script:
-  - export CABAL=cabal-1.20
+  - export CABAL=cabal-1.22
   - cd test-sandbox
   - $CABAL install --only-dependencies --enable-tests
   - $CABAL check
@@ -28,7 +28,7 @@ script:
   - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
   - "rm -rf tmp && mkdir tmp && cd tmp"
   - "tar -xf $SRC_TGZ && cd test-sandbox*/"
-  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
   - $CABAL install $SRC_TGZ
   - cd ../../../hspec-test-sandbox
   - $CABAL install --only-dependencies --enable-tests
@@ -37,7 +37,7 @@ script:
   - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
   - "rm -rf tmp && mkdir tmp && cd tmp"
   - "tar -xf $SRC_TGZ && cd hspec-test-sandbox*/"
-  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
   - cd ../../../test-sandbox-hunit
   - $CABAL install --only-dependencies --enable-tests
   - $CABAL check
@@ -45,7 +45,7 @@ script:
   - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
   - "rm -rf tmp && mkdir tmp && cd tmp"
   - "tar -xf $SRC_TGZ && cd test-sandbox-hunit*/"
-  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
   - cd ../../../test-sandbox-quickcheck
   - $CABAL install --only-dependencies --enable-tests
   - $CABAL check
@@ -53,12 +53,13 @@ script:
   - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
   - "rm -rf tmp && mkdir tmp && cd tmp"
   - "tar -xf $SRC_TGZ && cd test-sandbox-quickcheck*/"
-  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
   - cd ../../../test-framework-sandbox
+  - $CABAL install ../test-sandbox-hunit
   - $CABAL install --only-dependencies --enable-tests
   - $CABAL check
   - $CABAL sdist
   - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
   - "rm -rf tmp && mkdir tmp && cd tmp"
   - "tar -xf $SRC_TGZ && cd test-framework-sandbox*/"
-  - "$CABAL configure --enable-tests --ghc-options=-Werror && $CABAL build && $CABAL test "
+  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
