--- a/test-sandbox-hunit/test-sandbox-hunit.cabal
+++ b/test-sandbox-hunit/test-sandbox-hunit.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox-hunit
-Version:        0.1.0
+Version:        0.1.1
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       HUnit convenience functions for use with test-sandbox
@@ -12,13 +12,16 @@ Maintainer:     Benjamin Surma <benjamin.surma@gmail.com>
 Build-Type:     Simple
 Homepage:       http://gree.github.io/haskell-test-sandbox/
 Bug-Reports:    https://github.com/gree/haskell-test-sandbox/issues
+
+Extra-Source-Files:     ChangeLog.md
+
 Source-Repository head
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-sandbox-hunit_0.1.0
+    Tag:        test-sandbox-hunit_0.1.1
 
 Library
     Exposed-modules:    Test.Sandbox.HUnit
