--- a/.travis.yml
+++ b/.travis.yml
@@ -1,65 +1,22 @@
-cache: apt
-env:
- - GHCVER=7.10.1
- - GHCVER=7.8.4
- - GHCVER=7.6.3
+sudo: required
+dist: trusty
+group: edge
+
+language: c
+
+addons:
+  apt:
+    packages:
+    - libgmp-dev
 
 before_install:
- - sudo add-apt-repository -y ppa:hvr/ghc
- - sudo apt-get update
- - sudo apt-get install cabal-install-1.22 ghc-$GHCVER
- - export PATH=/opt/ghc/$GHCVER/bin:$PATH
- - |
-   if [ $GHCVER = "head" ] || [ ${GHCVER%.*} = "7.8" ]; then
-     sudo apt-get install happy-1.19.4 alex-3.1.3
-     export PATH=/opt/alex/3.1.3/bin:/opt/happy/1.19.4/bin:$PATH
-   else
-     sudo apt-get install happy alex
-   fi
-install:
- - cabal-1.22 update
+- mkdir -p ~/.local/bin
+- export PATH=$HOME/.local/bin:$PATH
+- travis_retry curl -sSL https://get.haskellstack.org/ | sh
 
 script:
-  - export CABAL=cabal-1.22
-  - cd test-sandbox
-  - $CABAL install --only-dependencies --enable-tests
-  - $CABAL check
-  - $CABAL sdist
-  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
-  - "rm -rf tmp && mkdir tmp && cd tmp"
-  - "tar -xf $SRC_TGZ && cd test-sandbox*/"
-  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
-  - $CABAL install $SRC_TGZ
-  - cd ../../../hspec-test-sandbox
-  - $CABAL install --only-dependencies --enable-tests
-  - $CABAL check
-  - $CABAL sdist
-  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
-  - "rm -rf tmp && mkdir tmp && cd tmp"
-  - "tar -xf $SRC_TGZ && cd hspec-test-sandbox*/"
-  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
-  - cd ../../../test-sandbox-hunit
-  - $CABAL install --only-dependencies --enable-tests
-  - $CABAL check
-  - $CABAL sdist
-  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
-  - "rm -rf tmp && mkdir tmp && cd tmp"
-  - "tar -xf $SRC_TGZ && cd test-sandbox-hunit*/"
-  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
-  - cd ../../../test-sandbox-quickcheck
-  - $CABAL install --only-dependencies --enable-tests
-  - $CABAL check
-  - $CABAL sdist
-  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
-  - "rm -rf tmp && mkdir tmp && cd tmp"
-  - "tar -xf $SRC_TGZ && cd test-sandbox-quickcheck*/"
-  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
-  - cd ../../../test-framework-sandbox
-  - $CABAL install ../test-sandbox-hunit
-  - $CABAL install --only-dependencies --enable-tests
-  - $CABAL check
-  - $CABAL sdist
-  - export SRC_TGZ="$PWD/dist/$($CABAL info . | awk '{print $2 ".tar.gz";exit}')"
-  - "rm -rf tmp && mkdir tmp && cd tmp"
-  - "tar -xf $SRC_TGZ && cd test-framework-sandbox*/"
-  - "$CABAL configure --enable-tests && $CABAL build && $CABAL test "
+- stack --no-terminal --install-ghc test
+
+cache:
+  directories:
+  - $HOME/.stack
