--- a/test-sandbox/test-sandbox.cabal
+++ b/test-sandbox/test-sandbox.cabal
@@ -51,8 +51,8 @@ Library
                       , random
                       , random-shuffle
                       , temporary
-                      , transformers             >= 0.2      && < 0.5
-                      , transformers-compat      >= 0.3      && < 0.5
+                      , transformers
+                      , transformers-compat
                       , transformers-base
                       , unix
                       , regex-posix
