--- a/test-framework-sandbox/test-framework-sandbox.cabal
+++ b/test-framework-sandbox/test-framework-sandbox.cabal
@@ -1,5 +1,5 @@
 Name:           test-framework-sandbox
-Version:        0.1.0
+Version:        0.1.1
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       test-sandbox support for the test-framework package
@@ -29,14 +29,14 @@ Source-Repository head
 Source-Repository this
     Type:       git
     Location:   https://github.com/gree/haskell-test-sandbox
-    Tag:        test-framework-sandbox_0.1.0
+    Tag:        test-framework-sandbox_0.1.1
 
 Library
     Exposed-modules:    Test.Framework.Providers.Sandbox
                         Test.Framework.Providers.Sandbox.Internals
 
     Build-Depends:      base >=4 && <5, ansi-terminal, lifted-base, mtl,
-                        temporary, test-framework >=0.8.0.3, test-sandbox == 0.1.*,
+                        temporary, test-framework >=0.8.0.3, test-sandbox >= 0.1.7,
                         transformers
 
     Hs-source-dirs:     src
@@ -52,6 +52,6 @@ Test-Suite test
                  , HUnit
                  , test-framework >= 0.8.0.3
                  , test-framework-sandbox == 0.1.*
-                 , test-sandbox == 0.1.*
+                 , test-sandbox >= 0.1.7
                  , test-sandbox-hunit == 0.1.*
   Main-Is:         test/test.hs
