--- a/test-sandbox/test-sandbox.cabal
+++ b/test-sandbox/test-sandbox.cabal
@@ -1,5 +1,5 @@
 Name:           test-sandbox
-Version:        0.1.7
+Version:        0.1.8
 Cabal-Version:  >= 1.14
 Category:       Testing
 Synopsis:       Sandbox for system tests
@@ -46,7 +46,7 @@ Library
                       , monad-control
                       , monad-loops
                       , mtl
-                      , network
+                      , network >= 3 && < 4
                       , network-bsd
                       , process
                       , random
