--- a/hspec-test-sandbox/hspec-test-sandbox.cabal
+++ b/hspec-test-sandbox/hspec-test-sandbox.cabal
@@ -41,7 +41,7 @@ library
 test-suite test
     type:              exitcode-stdio-1.0
     main-is:           test.hs
-    hs-source-dirs:    test,dist/build/autogen
+    hs-source-dirs:    test
     ghc-options:       -Wall
 
     build-depends: base
