--- a/test-sandbox/test-sandbox.cabal
+++ b/test-sandbox/test-sandbox.cabal
@@ -65,7 +65,7 @@ Library
 Test-Suite test
     type:              exitcode-stdio-1.0
     main-is:           test.hs
-    hs-source-dirs:    test,dist/build/autogen
+    hs-source-dirs:    test
     ghc-options:       -Wall
 
     build-depends: base
